--- a/index.html
+++ b/index.html
@@ -2,4 +2,9 @@
 <script>
 setBackdropURL("https://eating-simulator.github.io/Assets/bg-27.jpg")
 setBackdropStyle("cover")
+var doge = new Image({
+ url: "https://eating-simulator.github.io/Assets/favicon.png",
+ width: 64, 
+ height: 64,
+})
 </script>
