--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       document.body.insertBefore(xAndY, library)
       xAndY.style = 'margin: 0;'
       forever(() => {
-       xAndY.innerHTML = 'X: ' + mouseX + ' Y: ' + mouseY
+       alert('X: ' + mouseX + ' Y: ' + mouseY)
       })
 setBackdropURL("https://eating-simulator.github.io/Assets/bg-27.jpg")
 setBackdropStyle("cover")
